iOS button stretch fix 1

--- a/window.css
+++ b/window.css
@@ -76,5 +76,5 @@
 button {
     -webkit-appearance: none; 
     appearance: none; 
---webkit-backface-visibility:hidden;
+-webkit-backface-visibility:hidden;
 }
